<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ksrve</groupId>
    <artifactId>lab3-with-auth</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>server</module>
        <module>proxy</module>
        <module>client</module>
    </modules>

    <name>lab3-with-auth</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.compilerArgs>--enable-preview</maven.compiler.compilerArgs>
    </properties>

    <!-- Dependencies -->
    <dependencyManagement>
        <dependencies>
            <!-- Command Line Interface wrapper -->
            <!-- https://mvnrepository.com/artifact/com.beust/jcommander -->
            <dependency>
                <groupId>com.beust</groupId>
                <artifactId>jcommander</artifactId>
                <version>1.82</version>
            </dependency>
            <!-- /Command Line Interface wrapper -->

            <!-- Lombok -->
            <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.34</version>
                <scope>provided</scope>
            </dependency>
            <!-- /Lombok -->

            <!-- Logging -->
            <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>2.24.1</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>2.24.1</version>
            </dependency>
            <!-- Logging -->

            <!-- JAX-WS -->
            <!-- https://mvnrepository.com/artifact/jakarta.xml.ws/jakarta.xml.ws-api -->
            <dependency>
                <groupId>jakarta.xml.ws</groupId>
                <artifactId>jakarta.xml.ws-api</artifactId>
                <version>4.0.2</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.sun.xml.ws/jaxws-rt -->
            <dependency>
                <groupId>com.sun.xml.ws</groupId>
                <artifactId>jaxws-rt</artifactId>
                <version>4.0.3</version>
                <scope>runtime</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.sun.xml.ws/rt-->
            <dependency>
                <groupId>com.sun.xml.ws</groupId>
                <artifactId>rt</artifactId>
                <version>4.0.3</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>4.0.1</version>
            </dependency>
            <!-- /JAX-WS -->

            <!-- Weld for CDI -->
            <!-- https://mvnrepository.com/artifact/org.jboss.weld.se/weld-se-core -->
            <dependency>
                <groupId>org.jboss.weld.se</groupId>
                <artifactId>weld-se-core</artifactId>
                <version>5.1.3.Final</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.weld.servlet</groupId>
                <artifactId>weld-servlet-core</artifactId>
                <version>5.1.3.Final</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.weld.servlet</groupId>
                <artifactId>weld-servlet-shaded</artifactId>
                <version>5.1.3.Final</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.weld</groupId>
                <artifactId>weld-core-impl</artifactId>
                <version>5.1.3.Final</version>
            </dependency>
            <!-- /Weld for CDI -->

            <!-- Jakarta -->
            <!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
            <dependency>
                <groupId>jakarta.persistence</groupId>
                <artifactId>jakarta.persistence-api</artifactId>
                <version>3.2.0</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/jakarta.data/jakarta.data-api -->
            <dependency>
                <groupId>jakarta.data</groupId>
                <artifactId>jakarta.data-api</artifactId>
                <version>1.0.1</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/jakarta.inject/jakarta.inject-api -->
            <dependency>
                <groupId>jakarta.inject</groupId>
                <artifactId>jakarta.inject-api</artifactId>
                <version>2.0.1</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/jakarta.ejb/jakarta.ejb-api -->
            <dependency>
                <groupId>jakarta.ejb</groupId>
                <artifactId>jakarta.ejb-api</artifactId>
                <version>4.0.1</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>4.0.2</version>
            </dependency>
            <!-- /Jakarta -->

            <!-- Hibernate -->
            <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
            <dependency>
                <groupId>org.hibernate.orm</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>6.6.1.Final</version>
            </dependency>
            <!-- /Hibernate -->

            <!-- Database Driver -->
            <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.7.2</version>
            </dependency>
            <!-- /Database Driver -->
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-clean-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>

                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.4.0</version>
                    <configuration>
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                    </configuration>
                </plugin>

                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.0</version>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>1.18.34</version>
                            </path>
                        </annotationProcessorPaths>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <compilerArgs>${maven.compiler.compilerArgs}</compilerArgs>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>


</project>